task_4/iptables.txt
# Generated by iptables-save v1.6.1 on Fri Nov 29 09:14:07 2019
*nat
:PREROUTING ACCEPT [9664:879879]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [362:24912]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o enp0s3 -p tcp -j SNAT --to-source 10.0.2.15
COMMIT
# Completed on Fri Nov 29 09:14:07 2019
# Generated by iptables-save v1.6.1 on Fri Nov 29 09:14:07 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m iprange --src-range 192.168.0.30-192.168.0.44 -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 192.168.0.30-192.168.0.44 -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m iprange --src-range 192.168.0.30-192.168.0.44 -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 192.168.0.30-192.168.0.44 -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 192.168.0.30-192.168.0.44 -m tcp --dport 123 -j ACCEPT
-A INPUT -p udp -m iprange --src-range 192.168.0.30-192.168.0.44 -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 192.168.0.30-192.168.0.44 -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 192.168.0.30-192.168.0.44 -m udp --dport 22 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 172.20.0.100-172.20.0.200 -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 172.20.0.100-172.20.0.200 -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m iprange --src-range 172.20.0.100-172.20.0.200 -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 172.20.0.100-172.20.0.200 -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 172.20.0.100-172.20.0.200 -m tcp --dport 123 -j ACCEPT
-A INPUT -p udp -m iprange --src-range 172.20.0.100-172.20.0.200 -m udp --dport 123 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 172.20.0.100-172.20.0.200 -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m iprange --src-range 172.20.0.100-172.20.0.200 -m udp --dport 22 -j ACCEPT
-A INPUT -p icmp -m iprange --src-range 172.20.0.100-172.20.0.200 -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m iprange --src-range 192.168.0.30-192.168.0.44 -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 192.168.0.0/24 -d 172.20.0.100/24 --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.20.0.100/24 -d 192.168.0.0/24 --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 172.20.0.0/24 -d 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 137 -j ACCEPT
-A FORWARD -s 172.20.0.0/24 -d 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 138 -j ACCEPT
-A FORWARD -s 172.20.0.0/24 -d 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 139 -j ACCEPT
-A FORWARD -s 172.20.0.0/24 -d 192.168.0.0/24 -p tcp -m state --state NEW -m tcp --dport 445 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 172.20.0.0/24 -p tcp -m state --state NEW -m tcp --dport 137 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 172.20.0.0/24 -p tcp -m state --state NEW -m tcp --dport 138 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 172.20.0.0/24 -p tcp -m state --state NEW -m tcp --dport 139 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 172.20.0.0/24 -p tcp -m state --state NEW -m tcp --dport 445 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -d 172.20.0.0/24 -m state --state NEW -j DROP
-A FORWARD -s 172.20.0.0/24 -d 192.168.0.0/24 -m state --state NEW -j DROP
-A FORWARD -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Fri Nov 29 09:14:07 2019
